# occams-rpc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: fast_validate.yml  rust.yml  smol_x86.yml  tokio_x86.yml  typos.yml
codec/: Cargo.toml
codec/src/: lib.rs  msgpack.rs
core/: Cargo.toml
core/occams-rpc-core/: Cargo.toml
core/src/: codec.rs  config.rs  error.rs  graceful.rs  io.rs  lib.rs  runtime.rs
core/src/io/: buf_io.rs  buffer.rs  mod.rs
core/tests/: buf_stream.rs
docs/: agent.md  api_design.md  api_service_macros.md  client_macros.md  client_task_v1.md  design_v2.md  server_macros.md  stream_client_macros.md  stream_server_macros.md
integration_test/: Cargo.toml
integration_test/src/: lib.rs  stream_client.rs  stream_server.rs
integration_test/src/tests/: mod.rs  test_normal.rs
macros/: Cargo.toml  Makefile
macros/src/: client_task.rs  client_task_enum.rs  endpoint_async.rs  lib.rs  server_task_enum.rs  service.rs  service_mux_struct.rs
macros/tests/: common.rs  test_api_macros.rs  test_client_service.rs  test_client_task.rs  test_client_task_define.rs  test_client_task_enum.rs  test_client_task_enum_define.rs  test_proc_macro.rs  test_server_service.rs  test_server_task_enum.rs  test_server_task_enum_define.rs
occams-rpc-macros/: Cargo.toml
occams-rpc-macros/src/: lib.rs
occams-rpc-macros/tests/: test_proc_macro.rs
runtime/smol/: Cargo.toml
runtime/smol/src/: lib.rs
runtime/tokio/: Cargo.toml
runtime/tokio/src/: lib.rs
src/: buffer.rs  client.rs  codec.rs  config.rs  error.rs  graceful.rs  io.rs  lib.rs  macros.rs  net.rs  runtime.rs  server.rs  service.rs  transport.rs  unify.rs  utils.rs
src/client/: factory.rs  facts.rs  mod.rs  task.rs
src/ll/: client.rs  mod.rs  notifier.rs  proto.rs  server.rs  task.rs  throttler.rs
src/server/: dispatch.rs  mod.rs  service.rs  task.rs
src/stream/: client.rs  client_impl.rs  client_task.rs  client_timer.rs  mod.rs  proto.rs  server.rs  server_impl.rs  throttler.rs
stream/: Cargo.toml
stream/macros/: Cargo.toml
stream/macros/src/: client_task.rs  client_task_enum.rs  lib.rs  server_task_enum.rs
stream/macros/tests/: test_client_task.rs  test_client_task_define.rs  test_client_task_enum.rs  test_client_task_enum_define.rs  test_client_task_enum_generic.rs  test_server_task_enum.rs  test_server_task_enum_define.rs
stream/src/: client.rs  client_impl.rs  client_pool.rs  client_stream.rs  client_timer.rs  lib.rs  macros.rs  proto.rs  server.rs  server_impl.rs  throttler.rs
stream/src/client/: failover.rs  mod.rs  pool.rs  stream.rs  task.rs  throttler.rs  timer.rs
stream/src/server/: dispatch.rs  mod.rs  server.rs  task.rs
stream/test/: Cargo.toml
stream/test/src/: client.rs  lib.rs  server.rs
stream/test/src/tests/: bench_throughput.rs  mod.rs  test_client_drop.rs  test_error_handling.rs  test_normal.rs  test_ping.rs  test_timeout.rs
test-suite/: Cargo.toml
test-suite/src/: lib.rs
test-suite/src/api/: client.rs  mod.rs  server.rs  service.rs
test-suite/src/api/basic/: mod.rs  test_remote.rs
test-suite/src/stream/: client.rs  mod.rs  server.rs
test-suite/src/stream/basic/: mod.rs  test_client_drop.rs  test_error_handling.rs  test_normal.rs  test_ping.rs  test_timeout.rs
test-suite/src/stream/bench/: throughput.rs
test-suite/src/stream/pressure/: mod.rs  test_failover.rs  test_round_robin.rs
tests/: server_tasks.rs  stream_common.rs
transport/quic/: Cargo.toml
transport/quic/src/: client.rs  lib.rs  net.rs  server.rs
transport/rdma/: Cargo.toml
transport/tcp/: Cargo.toml
transport/tcp/src/: client.rs  lib.rs  net.rs  server.rs
transport_quic/: Cargo.toml
transport_rdma/: Cargo.toml
transport_rdma/src/: lib.rs
transport_tcp/: Cargo.toml
transport_tcp/src/: client.rs  client_impl.rs  graceful.rs  lib.rs  net.rs  server.rs
