[workspace]
members = ["core", "codec", "macros", "runtime/tokio", "runtime/smol", "stream", "stream/macros", "transport/tcp", "transport/rdma", "transport/quic", "stream/test", ]

[package]
name = "occams-rpc"
version = "0.1.1"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/occams-rpc"
documentation = "https://docs.rs/occams-rpc"
keywords = ["networking", "rpc"]
readme = "README.md"
license = "MIT"
description = """
occams-rpc is a modular, pluggable RPC for high throughput scenario, supports various runtimes,
with a low-level streaming interface, and high-level remote API call interface.
"""

[dependencies]
log = { version = "0.4", features = ["std", "kv_unstable"] }
captains-log = ">=0.15"
io-buffer = "1"
serde = "1"
occams-rpc-core = {path="core/", version="0"}
occams-rpc-codec = {path="codec/", version="0"}
occams-rpc-stream = {path="stream/", version="0"}
occams-rpc-api-macros = { path = "macros", version = "0" }
async-trait = "0"
rustc-hash = "2"
crossfire = "2.1"

[features]
default = []

[dev-dependencies]
serde_derive = "1"

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
