[package]
name = "occams-rpc-codec"
version = "0.1.0"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/occams-rpc"
documentation = "https://docs.rs/occams-rpc"
keywords = ["networking", "rpc"]
license = "MIT"
description = """
This is the codec packages for occams_rpc.
occams_rpc is a modular, plugable RPC for high throughput scenario, supports various runtime,
with a low-level streaming interface, and high-level remote API call interface.
"""

[dependencies]
occams-rpc-core = {path="../core", version="0"}
serde = "1"
rmp-serde = {version="1.1", optional=true}
log = "0.4"

[features]
default = []
msgpack = ["dep:rmp-serde"]
