[package]
name = "occams-rpc-core"
version = "0.1.1"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/occams-rpc"
documentation = "https://docs.rs/occams-rpc"
keywords = ["networking", "rpc"]
readme = "../README.md"
license = "MIT"
description = """
The core utils of occams-rpc.
occams-rpc is a modular, pluggable RPC for high throughput scenario, supports various runtimes,
with a low-level streaming interface, and high-level remote API call interface.
"""

[dependencies]
serde = "1"
io-buffer = "1"
pin-project-lite = "0"
libc = "0"
signal-hook = { version = "0" }
close_fds = ">=0.3.2"
log = { version = "0.4", features = ["std", "kv_unstable"] }
strum={version="0", features=["derive"]}
nix = "0"
thiserror = "2"

[dev-dependencies]
serde_derive = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
num_enum = "0.7"
