[package]
name = "integration_test"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1"
serde_derive = "1"
occams-rpc = {path="../"}
occams-rpc-tokio = {path="../runtime/tokio", optional=true}
occams-rpc-smol = {path="../runtime/smol", features=["global"], optional=true}
occams-rpc-tcp = {path="../transport_tcp"}
log = { version = "0.4", features = ["std", "kv_unstable"] }
captains-log = "0.14"
crossfire = "2.1"
smol = { version="2", optional=true }
tokio = { version = "1", features = ["net", "time", "rt"], optional=true }
io-buffer = "1"

[features]
default = ["smol"]
tokio = ["dep:tokio", "dep:occams-rpc-tokio"]
smol = ["dep:smol", "dep:occams-rpc-smol"]
