[package]
name = "occams-rpc-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
occams-rpc = { path="../" }
serde = "1"
serde_derive = "1"
rmp-serde = "1.1"
io-buffer = "1"
crossfire = "2.1.4"
log = "0.4.14"
