[package]
name = "occams-rpc-stream"
version = "0.2.0"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/occams-rpc"
documentation = "https://docs.rs/occams-rpc"
keywords = ["networking", "rpc"]
license = "MIT"
readme = "../README.md"
description = """
The streaming interface of occams-rpc.
occams-rpc is a modular, pluggable RPC for high throughput scenario, supports various runtimes,
with a low-level streaming interface, and high-level remote API call interface.
"""

[dependencies]
occams-rpc-core = {path="../core/", version=">=0.2"}
occams-rpc-stream-macros = {path="macros", version=">=0.2"}
log = { version = "0.4", features = ["std", "kv_unstable"] }
captains-log = ">=0.15"
futures = "0.3"
zerocopy = { version="0.8", features=["derive"]}
io-buffer = "1"
rustc-hash = "1.1"
sync-utils = "0"
serde = "1"
crossfire = "2.1"
arc-swap = "1"

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
