[package]
name = "occams_rpc_tcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "time", "rt"] }
log = { version = "0.4", features = ["std", "kv_unstable"] }
captains-log = "0.4"
close_fds = "0.3.2"
async-trait = "0.1"
crossfire = "2.1"
futures = "0.3"
zerocopy = "0.2"
io-buffer = "1"
bytes = "1"
libc = "0"
nix = "0"
signal-hook = { version = "0" }
occams-rpc = {path="../"}
