[package]
name = "occams-rpc-smol"
version = "0.2.0"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/occams-rpc"
documentation = "https://docs.rs/occams-rpc-smol"
keywords = ["networking", "rpc"]
readme = "../../README.md"
license = "MIT"
description = """
occams-rpc runtime adaptor for smol-rs ecology.
occams-rpc is a modular, pluggable RPC for high throughput scenario, supports various runtimes,
with a low-level streaming interface, and high-level remote API call interface.
"""

[dependencies]
futures = "0.3"
occams-rpc-core = { path = "../../core/", version=">=0.2" }
occams-rpc-stream = { path = "../../stream", version=">=0.2" }
async-io = "2.6"
async-executor = "1"
smol = {version="2", optional=true}

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[features]
global = ["dep:smol"]
