[package]
name = "occams-rpc-tokio"
version = "0.1.1"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/occams-rpc-tokio"
documentation = "https://docs.rs/occams-tokio"
keywords = ["networking", "rpc"]
readme = "../../README.md"
license = "MIT"
description = """
occams-rpc runtime adaptor for tokio ecology
occams-rpc is a modular, pluggable RPC for high throughput scenario, supports various runtimes,
with a low-level streaming interface, and high-level remote API call interface.
"""

[dependencies]
tokio = { version = "1", features = ["net", "time", "rt"] }
occams-rpc-core = { path = "../../core/", version="0" }

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
