[package]
name = "occams-rpc-stream-macros"
version = "0.1.1"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/occams-rpc"
documentation = "https://docs.rs/occams-rpc"
keywords = ["networking", "rpc"]
readme = "../../README.md"
license = "MIT"
description = """
The macro crate for occams-rpc-stream.
occams-rpc is a modular, pluggable RPC for high throughput scenario, supports various runtimes,
with a low-level streaming interface, and high-level remote API call interface.
"""

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
nix = "0"
occams-rpc-stream = { path="../", version="0" }
occams-rpc-core = { path="../../core", version="0" }
occams-rpc-codec = { path="../../codec", version="0", features=["msgpack"] }
serde = "1"
serde_derive = "1"
io-buffer = "1"
crossfire = "2.1.4"
log = "0.4.14"
