[package]
name = "stream_test"
edition = "2024"

[dependencies]
serde = "1"
serde_derive = "1"
occams-rpc-core = {path="../../core", version="0"}
occams-rpc-stream = {path="../", version="0"}
occams-rpc-tokio = {path="../..//runtime/tokio", version="0", optional=true}
occams-rpc-smol = {path="../../runtime/smol", version="0", features=["global"], optional=true}
occams-rpc-tcp = {path="../../transport/tcp", version="0"}
occams-rpc-codec = {path="../../codec", version="0", features=["msgpack"]}
log = { version = "0.4", features = ["std", "kv_unstable"] }
captains-log = ">=0.15"
crossfire = "2.1"
tokio = { version = "1", features = ["net", "time", "rt", "rt-multi-thread"], optional=true }
smol = {version = "2", optional=true }
io-buffer = "1"
rstest = "0"
nix = "0"

[dev-dependencies]

[features]
default = ["smol"]
tokio = ["dep:tokio", "dep:occams-rpc-tokio"]
smol = ["dep:smol", "dep:occams-rpc-smol"]

