[package]
name = "occams-rpc-tcp"
version = "0.1.0"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["concurrency", "network-programming"]
repository = "https://github.com/NaturalIO/occams-rpc"
documentation = "https://docs.rs/occams-rpc"
keywords = ["networking", "rpc"]
readme = "../../README.md"
license = "MIT"
description = """
The TCP/unix transport layer of occams-rpc.
occams-rpc is a modular, pluggable RPC for high throughput scenario, supports various runtimes,
with a low-level streaming interface, and high-level remote API call interface.
"""

[dependencies]
occams-rpc-core = {path="../../core", version="0"}
occams-rpc-stream = {path="../../stream", version="0"}
log = { version = "0.4", features = ["std", "kv_unstable"] }
captains-log = ">=0.15"
close_fds = "0.3.2"
async-trait = "0.1"
crossfire = "2.1"
futures = "0.3"
zerocopy = "0.2"
io-buffer = "1"
libc = "0"
signal-hook = { version = "0" }

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
